--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ before_install:
   - curl https://sdk.cloud.google.com | bash > /dev/null;
   - source $HOME/google-cloud-sdk/path.bash.inc
   - gcloud components update kubectl
-  - gcloud auth activate-service-account --key-file seervice-account.json
+  - gcloud auth activate-service-account --key-file service-account.json
   - gcloud config set project ck-k8s
   - gcloud config set compute/zone asia-northeast1-a
   - gcloud container clusters get-credentials multi-cluster
