--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ before_install:
   - docker build -t stephengrider/react-test -f ./client/Dockerfile.dev ./client
 
 script:
-  - docker run -e CI=true stephengrider/docker-react npm run test
+  - docker run stephengrider/react-test npm test -- --coverage
 
 deploy:
   provider: script
